# rl-scheduling-env

./: .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  sample_infrenae.py
docs/: 2026-04-07-153534-local-command-caveatcaveat-the-messages-below.txt  ENV_LEARNINGS.md  HACKATHON_META.md  hackathon-guide-rl-environments.md
docs/superpowers/specs/: 2025-04-06-scheduling-env-design.md
server/: __init__.py  app.py  graders.py  scenario_generator.py  scheduling_env_environment.py  scheduling_logic.py
server/scenarios/: task1_easy.json  task2_medium.json  task3_hard.json
