# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-scheduling_env"
version = "0.1.0"
description = "Scheduling Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    "openenv-core[core]>=0.2.2",
    # Pydantic for data models
    "pydantic>=2.5.0,<3.0.0",
    # OpenAI client for LLM-based inference
    "openai>=1.0.0",
    # HTTP requests for inference script
    "requests>=2.31.0",
    # ASGI server
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m scheduling_env.server.app
server = "scheduling_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["scheduling_env", "scheduling_env.server"]
package-dir = { "scheduling_env" = ".", "scheduling_env.server" = "server" }